--- a/docs/team/ccyccyccy.adoc
+++ b/docs/team/ccyccyccy.adoc
@@ -1,6 +1,8 @@
-:imagesDir: ../images
-
 = Chong Chee Yuan - Project Portfolio for MyProject
+:site-section: AboutUs
+:imagesDir: ../images
+:stylesDir: ../stylesheets
+
 
 == Introduction to the project
 
@@ -19,22 +21,23 @@ Aside from basic features such as setting of tasks and deadlines, MyProject also
 This is what our project look like:
 
 .Graphical User Interface for MyProject
+
 image::Ui.png[]
 
 This document serves to record down my contributions to the project in detail.
 
 == Summary of contributions
 
-*Enhancement*: Implemented `addTimetable` and `generate` command. `addTimetable` records down a member's schedule, while `generate` suggests timings to schedule meetings on.
+*Enhancement*: Implemented `setTimetable` and `generate` command. `setTimetable` records down a member's schedule, while `generate` suggests timings to schedule meetings on.
 
 * *What it does*:
-** The `addTimetable` command is primarily used to support the `generate` command by recording members' schedule. The `addTimetable` command  is made extremely convenient for NUS students due to our integration with NUSMods timetable sharing feature, allowing users to simply input a NUSMods timetable sharing URL, instead of having to enter all the timings manually.
-** The `generate` command suggest the most suitable timeslots to schedule project meetings on, based on the timetable of members added using the `addTimetable` command.
+** The `setTimetable` command is primarily used to support the `generate` command by recording members' schedule. The `setTimetable` command  is made extremely convenient for NUS students due to our integration with NUSMods timetable sharing feature, allowing users to simply input a NUSMods timetable sharing URL, instead of having to enter all the timings manually.
+** The `generate` command suggest the most suitable timeslots to schedule project meetings on, based on the timetable of members added using the `setTimetable` command.
 * *Justification*
-** Team leaders often have trouble scheduling team meetings, having to run to every single members and ask for their availability at a certain timeslot. This process is often time consuming and inefficient. With this enhancement, team leaders can avoid this issue entirely by simply entering a database of team members' timetables into *_MyProject_* using the command `addTimetable`, and generate meeting timeslots using the command `generate`.
+** Team leaders often have trouble scheduling team meetings, having to run to every single members and ask for their availability at a certain timeslot. This process is often time consuming and inefficient. With this enhancement, team leaders can avoid this issue entirely by simply entering a database of team members' timetables into *_MyProject_* using the command `setTimetable`, and generate meeting timeslots using the command `generate`.
 
 * *Highlights*
-** I tried to make this enhancement to be very convenient to use, with only 2 commands required for this functionality to work. This led to the high variety of errors that the `generate` and `addTimetable` command can occur. As such, I had to provide a robust error catching mechanism to identify what the user did wrongly and provide suggestion on how to make the command work.
+** I tried to make this enhancement to be very convenient to use, with only 2 commands required for this functionality to work. This led to the high variety of errors that the `generate` and `setTimetable` command can occur. As such, I had to provide a robust error catching mechanism to identify what the user did wrongly and provide suggestion on how to make the command work.
 ** This enhancement was also challenging because the current Java data and time libraries do not fully address my needs for a weekly recurring type of timetable, thus I had to implement it myself, which proves to be more of a challenge than expected. However, this proved to be worth the time, as it forms the backbone of the entire enhancement. This allowed for my enhancement to be extremely extendable so that we can easily provide for more sources of input, such as input from .ics files.
 
 * *Credits*
@@ -61,155 +64,8 @@ We had to provide a user guide as an instruction for how to use our software. Th
 
 Below is the section of user guide that I contributed for my tasks.
 
-=== 4. Add a timetable: `addTimetable`
+include::../UserGuide.adoc[tag=setTimetable]
 
-Adds a timetable for the specified person, to record down their schedule.
-
-[TIP]
-Timetable added is later used to generate avaiable meeting timeslots using the command `generate`
-
-Format:
-
-`addTimetable INDEX [n/NUSMODS_SHARE_URL] [f/FILEPATH_TO_TIMETABLE]`
-
-Example:
-
-* `addTimetable 3 f//home/john/Desktop/aliceTimetable.txt` +
-Add Alice's timetable to Alice, who has index 3 in the list of persons.
-* `addTimetable 2 n/https://nusmods.com/timetable/sem-1/share?CS2100=LAB:05,TUT:02,LEC:1&CS2101=&CS2103T=LEC:G13&CS2105=TUT:03,LEC:1&CS3241=TUT:05,LEC:1&CS3243=TUT:01,LEC:1&GEQ1000=TUT:D27` +
-Add timetable to the person with index 2 on the list of persons.
-
-=== 1. Generate meeting timing: `generate` [Checkout]
-
-Generates possible meeting timeslots for which everyone is available.
-
-* Prerequisite: Timetables have been assigned to the members with the command `addTimetable`
-
-[NOTE]
-`generate` would still work even if some members do not have timetable assigned to them. Make sure that you have done `addTimetable` for each of the members  in the project.
-
-Format: `generate d/DURATION [r/TIMERANGE]`
-
-Example:
-
-* `generate d/2 r/MONDAY 0900 MONDAY 1800` +
-Generates all possible meeting timeslots that lasts at least 2 hours, within the time frame of Monday 9am to Monday 6pm.
+include::../UserGuide.adoc[tag=generate]
 
 == Contributions to the Developer Guide
-
-We had to provide instructions for other developers on how to understand our software architecture, and we implemented various features, and what were our considerations when we implemented them in the way we did. This is to help future developers on this project understand our code quickly and continue development on this. The guide also serves as a manual for developer to refer to while developing the software, as it contains useful informations and diagrams to aid in understand the structure of the program.
-
-Below is the section of developer guide that I contributed for my tasks.
-
-
-=== Generate meeting timeslot
-==== Description of Feature
-
-The timeslot generator is used to suggest meeting timings by making use of team members' timetable.
-
-[NOTE]
-This feature makes heavy use of the class `TimeRange`, which represents a period of time in a week, e.g. MONDAY 1000 -- MONDAY 1200.
-
-The main logic of this feature is contained within the `TimeSlotGenerator` class:
-
-`TimeSlotGenerator(members, desiredMeetingDuration, restrictedTimeRange)`
-
-* `members`: `List<Timetable>` of members of the checked-out `Project`
-* `desiredMeetingDuration`: How long the meeting would last in hour, expressed as a positive integer
-* `restrictedTimeRange`: Sets the limit of generated `TimeRange`, e.g. restrict meeting to working hours, from MONDAY 0900 - MONDAY 1800
-
-Only the two following methods are exposed:
-
-* `TimeSlotGenerator#generate()` -- Generate timeslot suitable for *_all_* `Timetable` supplied. Returns a list of `TimeRange`, or an empty list of `TimeRange` if no such timeslot is available.
-* `TimeSlotGenerator#generateWithMostMembers()` -- Generate timeslot where *_most_* members of the currently checked out project are available. Returns a list of `TimeRange`.
-
-==== Details
-
-This feature depends on the timetable stored internally as an attribute of each members:
-
-image::GenerateSlotClassDiagram.png[]
-
-Typical usage of `TimeSlotGenerator` would be look like this:
-
-`List<TimeRange> availableTimeSlots = new TimeSlotGenerator(members, desiredMeetingDuration, restrictedTimeRange).generate()`
-
-The following sequence diagram shows the entire process of generating timeslot after the command `generate d/2` is given:
-
-image::GenerateSlotSequenceDiagram.png[]
-
-As shown in the sequence diagram above, the command execution would go through the following stages:
-
-. Fetch the data of members in the current project and pass them to the `TimeSlotGenerator`.
-. `TimeSlotGenerator` will extract their timetable and generate all possible `TimeRange`.
-. Display result for the user to view all the possible timeslots that a meeting can be held.
-
-[NOTE]
-If `generate()` returns an empty `List<TimeRange>`, the program should automatically call `generateWithMostMembers()` and return it as result, informing the user that there is no timeslot where all members are available.
-
-The following activity diagram summarizes the general flow of the command `generate`:
-
-.`generate` command tries to provide best possible meeting timeslot
-image::GenerateSlotActivityDiagram.png[]
-
-==== Algorithm Used
-
-===== `TimeSlotGenerator#generate()`
-
-. Combine all the given `Timetable` into a single `List<TimeRange> combined`
-. `combined` is then processed further by merging overlapping `TimeRange` into a single `TimeRange`. E.g. `TimeRange(MONDAY, 1000, MONDAY, 1200)` and `TimeRange(MONDAY, 1200, MONDAY,1400)` are merged together to form a single `TimeRange(MONDAY, 1000, MONDAY, 1400)`. `List<TimeRange> merged` is then passed on to the next stage.
-. `merged` is then inverted, and returns `List<TimeRange> inverted` containing all timeslots where all the members are free.
-. `inverted` is then processed to ensure that all `TimeRange` falls within `restrictedTimeRange` specified by the user, truncating all `TimeRange` that extends beyond the specified `restrictedTimeRange`, returning `List<TimeRange> truncated`.
-. The algorithm then filters `inverted` by rejecting all `TimeRange` that last shorter than `desiredMeetingDuration` specified by the user. This `List<TimeRange> accepted` is then passed back to the caller of this method, and the algorithm terminates.
-
-===== `TimeSlotGenerator#generateWithMostMembers()`
-
-. Iterates over all possible combinations of timetables in descending order of number of timetable.
-. For each possible combination, call `TimeSlotGenerator#generate()`.
-. If `TimeSlotGenerator#generate()` returns an empty list, repeat step 2 again.
-. Algorithm terminates, returning the combination of List<Timetable> used and available timings `List<TimeRange>` wrapped in a class `TimeSlotWithMember`.
-
-==== Design Considerations
-
-===== Aspect: How to generate timeslot with most number of available members
-
-* **Alternative 1 (current choice):** Iterate over all possible combinations of timetables, sorted in descending order of number of timetables, and call `TimeSlotGenerator#generate()` on each of these combinations.
-** Pros: Easy to implement.
-** Cons: May have performance issues in terms of speed. This implementation takes O(2^n^) time for _n_  members.
-* **Alternative 2:** Use a more sophisticated algorithm, like a segment tree.
-** Pros: Will use much less time.
-** Cons: Harder to implement, and more specialize towards only doing a single task.
-
-We went with options 1 as there is no real difference in speed if the number of members is restricted to below 15 members, which many projects do not normally exceed. It is much easier to understand and maintain by other developers as well.
-
-=== Timetable input
-==== Description of Feature
-There are two ways to input member's timetable
-
-. Member send a formatted text file to the team leader, which would then be parsed by the system
-. Member send their NUSMods timetable URL to the team leader, and the system would fetch their timetable data using NUSMods API
-
-The main logic is implemented within the `AddTimetableCommand` class.
-
-==== Details
-
-Important functions in the `AddTimetableCommand`:
-
-* `AddTimetableCommand#getTimetableFromNUSMods(String url)` -- Fetch timetable data using NUSMods API
-* `AddTimetableCommand#getTimetableFromFile(String filepath)` -- Parse file to obtain timetable data
-
-An overview of how the `AddTimetableCommand` class works, shown in figure below:
-
-<INSERT CLASS DIAGRAM, SHOW DEPENDENCIES>
-
-User command would be in the format: `addTimetable m/member [u/url] [f/filepath]`
-
-Below diagram shows the entire process of adding timetable from file:
-
-<INSERT SEQUENCE DIAGRAM FOR FILE INPUT>
-
-Alternatively, user can input using NUSMods shared timetable URL.
-
-Following sequence diagram would delve directly into the process of fetching timetable data using NUSMods API, as the earlier portion of command parsing is similar to the above figure.
-
-<INSERT SEQUENCE DIAGRAM, starting directly from getTimetableFromNUSMods>
-
