--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -646,6 +646,32 @@ We are using `java.util.logging` package for logging. The `LogsCenter` class is 
 
 Certain properties of the application can be controlled (e.g user prefs file location, logging level) through the configuration file (default: `config.json`).
 
+=== Finance feature
+
+The finance feature allows the user to keep track of the budgets of
+the project and view them in a graph. The graphs are achieved
+using JavaFX built in bar and pie chart. The user is also able to store
+the information in an excel sheet as well. This is done using
+the Apache POI API. The documentation of this library can
+be seen at https://poi.apache.org/apidocs/[here].
+
+==== Details
+
+This logic of the feature is based on the the construction of different classes.
+
+.This class diagram depicts the interaction among classes under finance feature.
+image::FinanceClassDiagram.png[]
+
+The fact that `Budget` contains two money object is that it maintains
+two attribute `amount` and `remainingAmount` as these are usually
+the crucial information the user wants to see.
+
+==== Design considerations
+`Money` is represented as an object. As it is shared by the
+`Spending` class and the `Budget` class and they all require to
+check the validity of a given string to convert it to `BigDecimal`.
+
+
 [[Implementation-Checkout]]
 === Checkout
 This allows user to checkout to a project from a list of project to work on it.
@@ -667,13 +693,15 @@ image::CheckoutSequenceDiagram.png[]
 The first step of changing UI display is to find out
 whether a change in UI is needed given a command from user.
 This is done in the CommandResult class constructor. If a command
-word matches either of the four words `list, checkout, listBudget, addProject`,
-the flag of whether a change in UI is needed will be set to true.
+word matches actions that is email related or help or exit,
+the flag will indicate that a change in UI is not needed.
 
 Next, a class to represent a state of UI is needed to remember
-a history which is the `UiEvent` class.
-UiEvent is a class that represent a type of UiDisplay as an
-event. It stores the current state of the application's UI and the current working project if it exists.
+a history which is the `UiEvent` class.UiEvent is a class that represent
+a type of UiDisplay as an event. It stores the current state of the
+application's UI and the current working project if it exists.
+Whenever a command is executed, only if this command lead to a state
+that is different from the current one a new UiEvent will be generated and stored in history.
 The `viewHistory` is stored in the `MainWindow` class as a stack of UiEvents
 and it also maintains a currentStatePointer. When a `back` command
 is executed, it can check back on what is the previous state.
@@ -694,14 +722,16 @@ image::ChangeUiDisplayState0.png[]
 Step 2. The user executes `checkout 1` command to checkout to preoject 1 to work on.
 During the execution of the `checkout` command, at the commandresult generation step,
 it detects that there is a need to change the Ui and the flag is made to true.
-In the `MainWindow`, since a change is needed, `MainWindow#changeUi` is called
+In the `MainWindow`, since a change is needed, `MainWindow#changeUiDisplay` is called
 to change the display and set the `currentState` to be `PROJECT_OVERVIEW`.
 
 image::ChangeUiDisplayState1.png[]
 
 Step 3. The user now decide to add a budget by `addBudget b/ equipment 3000.00`.
-This command does not need a change in Ui display thus the flag is false.
-However, the method `MainWindow#changeUiDisplay` is still called but this time
+This command does need a change in Ui display but the state of this command
+is exactly the same as the previous command thus `MainWindow#changeUiDisplay`
+will be called with the same state.
+Thus, the method `MainWindow#changeUiDisplay` is still called but this time
 it is called to update the information in the current display and set the
 current state to be still the current state. Thus, the `currentStatePointer` does
 not move.
@@ -725,6 +755,8 @@ and call `MainWindow#changeUiDisplay` to display the previous Ui.
 image::ChangeUiDisplayState4.png[]
 image::ChangeUiDisplayState5.png[]
 
+.This diagram shows how the Ui reacts to an user's input
+image::ChangeUiDisplayActivityDiagram.png[]
 
 [NOTE]
 If the `currentStatePointer` is at `PROJECT_LIST`, then there are
@@ -815,6 +847,7 @@ and a method to retrieve the values.
 *** It is more difficult to iterate through all HashMaps to retrieve the values based on your preferred ordering.
 
 // end::performanceTracking[]
+
 
 == Documentation
 
