--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -72,8 +72,6 @@ Example:
 
 * `checkout 1`
 
-.After you have checked out to a project, an overview of the project will be shown.
-image::checkout-command.png[]
 
 ==== Return to previous: `back`
 
@@ -703,6 +701,67 @@ Format: `sortMeeting INDEX`
 Example:
 
 * `sortMeeting 1` (Sorts the meetings by alphabetical order)
+
+
+=== Finance
+
+Imagine today you just attended the Budget meeting
+and your Organization is kind enough to provide you with
+budgets for your event! How delightful! What’s better is
+that you can record this information in MyProject!
+
+==== Add budget: `addBudget` [Checkout]
+Let's say the organization gave you budgets on equipment and
+manpower, let's first add these budgets to the project.
+
+image::addBudget.png[]
+
+After adding the budgets, we will be able to see a summary of
+them at project overview. Currently it only shows the amount
+remaining which is the same as the amount you input just now
+because you haven't spent anything yet.
+
+image::projectOverview.png[]
+
+==== Add expense: `addExpense` [Checkout]
+
+One month later...
+
+Now you have gone through quite a few meetings with the planning
+committee and made some orders online and receive some invoices,
+what's next? To record all these expenses, simply use the command
+addExpense to add it under the budget. In order to do that, you
+need the index of the budgets which you may already forgot, but
+you may simply type listBudgets to view them again.
+
+image::addExpense.png[]
+
+==== List budgets: `listBudget` [Checkout]
+
+Now, you are seeing the pie chart representation of the budgets.
+If you have already overshot the budget, the pie chart will show
+overshot instead of remaining to remind you!
+
+image::listBudget.png[]
+
+After all that have been done, a breakdown of the budget situation
+will be available at the project overview with stacked bar graph
+indicating the amount remaining and the amount spent.
+
+image::projectOverviewFinal.png[]
+
+==== Excel sheet storage
+
+Keeping the planning committee updated regarding budget is always
+a challenge isn't it? Only the treasurer knows the stuff
+inside out? Fret not, MyProject is here to help! Every update on
+the budget information will be recorded in an excel sheet located
+in the budgets folder. It creates a sheet per project and display
+the budgets and expenses under the budget in a table form. You
+can easily send this comprehensible document to your team members
+to update them!
+
+image::excelSheet.001.jpeg[]
 
 // tag::performanceTracking[]
 === Performance tracking
