--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -145,6 +145,7 @@ The `Storage` component,
 * can save `UserPref` objects in json format and read it back.
 * can save the Watch list data in json format and read it back.
 
+// tag::apicomponent[]
 [[Design-API]]
 === API component
 
@@ -155,19 +156,15 @@ image::ApiClass.png[]
 *API* :
 link:{repoURL}/src/main/java/seedu/ezwatchlist/api/ApiManager.java[`ApiManager.java`]
 
+In Figure 9, we see the structure of the API component centered around `ApiManager`. Moreover:
+
 .  `ApiManager` uses the `ApiUtil` class for static methods for data handling.
-.  This results in a `Command` object which is executed by the `LogicManager`.
-.  The command execution can affect the `Model` (e.g. adding a show).
-.  The result of the command execution is encapsulated as a `CommandResult` object which is passed back to the `Ui`.
-.  In addition, the `CommandResult` object can also instruct the `Ui` to perform certain actions, such as displaying help to the user.
+.  The `ApiUtil` class creates an `ImageRetrieval` object for retrieving images over the network and a `RecommendationEngine` object to generate recommendations.
+.  `ApiManager` object encapsulated by the interface `ApiInterface` can be created at any point in the application to access the online database.
+.  If no network connection can be established, an `OnlineConnectionException` is thrown.
+.  `ApiManager` will not affect any of the internal logic and model in the application.
 
-Given below is the Sequence Diagram for interactions within the `Logic` component for the `execute("delete 1")` API call.
-
-.Interactions Inside the Logic Component for the `delete 1` Command
-image::DeleteSequenceDiagram.png[]
-
-NOTE: The lifeline for `DeleteCommandParser` should end at the destroy marker (X) but due to a limitation of PlantUML, the lifeline reaches the end of diagram.
-
+// end::apicomponent[]
 
 [[Design-Commons]]
 === Common classes
@@ -301,6 +298,7 @@ We are using `java.util.logging` package for logging. The `LogsCenter` class is 
 * `INFO` : Information showing the noteworthy actions by the App
 * `FINE` : Details that is not usually noteworthy but may be useful in debugging e.g. print the actual list instead of just its size
 
+// tag::onlinedata[]
 === Online Data
 
 We are using https://www.themoviedb.org/documentation/api[The Movie Database (TMDB)] to retrieve information on movies and tv shows.
@@ -315,32 +313,40 @@ way the application retrieves any online information from the database.
 * `getMovieByName` : The method will return a list of movies in the database based on the name of the movie given
 * `getTvShowByName` : The method will return a list of tv shows in the database based on the name of the tv show given
 * `isConnected` : Checks if the application is connected online to the database
+* `getUpcomingMovies` : The method will return a list of upcoming movies from the database.
+* `getMovieByGenre` : The method will return a list of movies from the database based on a set of genres.
+* `getMovieRecommendations` : The method will return a list of movie recommendations specified by the amount required based on the user's movies.
+* `getTvShowRecommendations` : The method will return a list of tv shows recommendations specified by the amount required based on the user's tv shows.
 
-`ApiManager` is an implementation of `ApiInterface` and is done by using a https://github.com/holgerbrandl/themoviedbapi[java wrapper] for the TMDB api implemented by Holger Brandl.
+`ApiManager` is an implementation of `ApiInterface` and is dependent on a https://github.com/holgerbrandl/themoviedbapi[java wrapper] for the TMDB api implemented by Holger Brandl.
 Allowing us to retrieve information in the java code.
 
 Given below is an example of how the application might want to retrieve movie information through `ApiInterface`.
 
-Step 1. First an instance of a class implementing `ApiInterface` has to be created for the methods to be called. When `ApiManager` is instantiated the class api
-key's is used to create a call to the TMDB API. All information retrieved must go through the class's api call.
+Step 1. First an instance of a class implementing `ApiInterface` has to be created for the methods to be called such as `ApiManager`. When `ApiManager` is instantiated the class's internal field
+`Api Key` 's is used to create a *call object* to the TMDB database. All information retrieved must go through this class's api *call object*.
 
-Step 2. The method getMovieByName("Name Of Movie") is called and the api call searches the for the movie in the database with the name given.
+Step 2. The method getMovieByName("Name Of Movie") is called and the *api call object* is passed to the corresponding method in the class `ApiUtil`. The corresponding method then searches the for the movie in the database with the name given.
 A list of wrapped movies is given back, which is then read and used to create new instances of our application's `Show` model with information wrapped in classes such as
 `Name`, `Description`, and `Actor`.
 
 Step 3. To retrieve an image from the database, an image url is downloaded to the computer. The class `ImageRetrieval` does this. An
 `ImageRetrieval` instance is created by the method for each image, and is downloaded to a root folder determined by `ImageRetrieval#defaultDirectory()`.
 
-Step 4. A poster class is then created with the image path, to be used to load images in the application.
+Step 4. A `poster` class is then created with the image path of the downloaded image. At any point, the `poster` object can be used to load images in the application.
 
-Step 5. With the list of movies returned, the application is given access to online information in a readable format.
+Step 5. With the list of movies returned, the application can then read the internal `Movie` object returned. The `Poster` object in the `Movie` object can be used to load the poster of the movie, and the other fields can be shown to the user as seen in Figure 12.
 
+.The movie component shown to the user in `EzWatchlist`.
+image::moviecard.png[]
 [NOTE]
 At any point the application might fail due to the application not being connected to the internet. If that occurs a
 `OnlineConnectionException` is thrown for the application to handle.
 
 The relationship between all the classes are shown in the following class diagram:
-image:ApiClassDiagram.png[]
+
+.Detailed Api Class Diagram
+image::ApiClassDiagram.png[width=900]
 
 ==== Design Considerations
 
@@ -376,23 +382,23 @@ Recommendations are generated through the `RecommendationEngine` class in the AP
 recommendations are retrieved through the `ApiInterface` implemented in the API package.
 
 ===== Implementation
-Given below is a _sequence diagram_ of how the current Statistics page's retrieves recommendations from the class.
+Given below in Figure 14 is a _sequence diagram_ of how the recommendations are generated when called from the `ApiManager`.
 
 .Sequence Diagram of getMovieRecommendations
-image:getMovieRecommendationsSequenceDiagram.png[]
+image::movieRecommendationSD.png[width=900]
 
+Step 1. First an instance of `RecommendationEngine` is created by passing in the list of movies the user has and the *api call object* generated by the instance of the `ApiManager` object.
 
-Step 1. First an instance of `RecommendationEngine` is created by passing in the list of movies the user has and the amount of recommendations to be given back.
+Step 2. The method `getMovieRecommendations(noOfRecommendations)` is called in the `RecommendationEngine` object and it will:
 
-Step 2. The method getMovieRecommendations is called in the object and the object will:
+* Check if the list is valid to generate recommendations.
+* Parse the list to get the online entries in the database, and their recommendations from the database.
+* For each recommendation, store it in a _HashMap_ and if there are duplicates increase the value. This counts the amount of occurrences each recommendation occurs.
+* Filter the entries to remove all entries that the user already has.
 
-* Check if the list is valid to generate.
-* Parse the list to get the same online entry in the database.
-* Retrieve recommendations for each entry in the list.
+Step 3. The recommendations are then sorted based on the amount of occurrences in appears in the _HashMap_.
 
-Step 3. The recommendations are then sorted based on the amount of occurrences in appears in the recommendations.
-
-Step 4. The top entries limited by the amount of recommendations requested is passed back in a sorted list.
+Step 4. The recommendations are then returned in a list in which the length depends on the amount of recommendations requested.
 
 Step 5. With the list of movies returned, the application can then display the movie recommendations back to the user.
 
@@ -400,9 +406,7 @@ Step 5. With the list of movies returned, the application can then display the m
 If no recommendations can be generated, a `NoRecommendationsExceptions` is thrown. Moreover, an
 `OnlineConnectionException` is still thrown when not connected to the internet.
 
-
-
-
+// end::onlinedata[]
 [[Implementation-Configuration]]
 === Configuration
 
