--- a/docs/team/heze8.adoc
+++ b/docs/team/heze8.adoc
@@ -168,13 +168,16 @@ This sections showcases my contribution to the EzWatchlist Developer Guide, whic
 and illustrate technical details.
 
 |===
-|_Given below are sections I contributed to the Developer Guide. They showcase my ability to write technical documentation
-and the technical depth of my software engineering skills to the project._
+|_Given below are sections for the Api Component I wrote to introduce the design architecture in the application.
 |===
 
-//include::../DeveloperGuide.adoc[tag=undoredo]
+include::../DeveloperGuide.adoc[tag=apicomponent]
 
-//include::../DeveloperGuide.adoc[tag=dataencryption]
+|===
+|_Given below are sections for features I wrote to illustrate the implementation of the Api Model classes, Image Retrieval, and generation of Recommendations._
+|===
+
+include::../DeveloperGuide.adoc[tag=onlinedata]
 
 
 == PROJECT: PowerPointLabs
