--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -109,10 +109,10 @@ a/John | Smith p/High
 ```
 
 .A user about to pass 3 arguments to Typee in one input, following `add`.
-image::interactive_parsing_2.png[width='520']
+image::interactive_parsing_2.png[height='250' width='520']
 
 .Typee's response to the above input.
-image::interactive_parsing_3.png[width='520']
+image::interactive_parsing_3.png[height='250' width='520']
 
 Finally, a highly experienced user can create an 'Add' command in the conventional manner, i.e. by typing out
 the entire command at once. This is identical to the format introduced in the beginning of this section: -
@@ -125,6 +125,9 @@ the entire command at once. This is identical to the format introduced in the be
 structures and idiosyncrasies are detailed in the sections belonging to the respective commands.
 
 In general, commands are of two types - *static* and *dynamic*.
+
+At any point of time, the user can enter `// current` to view the current input constraints and
+input `// clear` to stop parsing the current command. These are examples of *dynamic* commands.
 
 Static commands are executed one at a time, whereas dynamic commands can be built at any point of time, even while
 parsing an ongoing static command.
@@ -198,10 +201,10 @@ and prompts the user to enter an acceptable engagement type instead. Since Typee
 the subsequent input must begin with `t/...`
 
 .A user about to enter an invalid input.
-image::interactive_parsing_4.png[width='520']
+image::interactive_parsing_4.png[height='250' width='520']
 
 .Typee's response to the invalid input.
-image::interactive_parsing_5.png[width='520']
+image::interactive_parsing_5.png[height='250' width='520']
 
 Attempting to replace the argument for a parameter or supply different arguments to the same parameter will result in Typee rejecting
 the user input.
