--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -624,8 +624,10 @@ You can get to the Schedule Tab easily by either clicking on the Schedule Tab on
 just simply type in any Schedule-related commands and AddMin+ will bring you there.
 
 [NOTE]
-All Event-Related commands that are done in the Schedule Tab, will be referencing the Event List displayed in the Schedule Tab.
-All Employee-Related commands are disabled in the Schedule Tab, as there is no Employee List being displayed in the Schedule Tab.
+====
+- All Event-Related commands that are done in the Schedule Tab, will be referencing the Event List displayed in the Schedule Tab.
+- All Employee-Related commands are disabled in the Schedule Tab, as there is no Employee List being displayed in the Schedule Tab.
+====
 
 ._User Interface (UI) of the Schedule Feature_
 image::ScheduleUiDetailed.png[]
@@ -633,7 +635,7 @@ image::ScheduleUiDetailed.png[]
 ---
 
 ==== Display Schedule for a specific date: `display_schedule_date`
-Want to check if you have any events on a specific date? Instead of looking through the list of events you have, you
+Want to check if you have any events on a specific date? Instead of looking through the entire list of events you have, you
 could use the `display_schedule_date` command to do it!
 
 Format: `display_schedule_date on/dd/MM/yyyy`
@@ -663,11 +665,13 @@ image::ScheduleUiStep2.png[]
 image::ScheduleUiStep3.png[]
 
 [NOTE]
-** The event list will be empty and not display anything if there is no event on the specified date.
-** The command is designed to give an overview of the user's schedule and is based on the event's Start and End date.
-It does not take account of whether the event has a set date and time on the specified input date
+====
+- The event list will be empty and not display anything if there is no event on the specified date.
+- The command is designed to give an overview of the user's schedule and is based on the event's Start and End date.
+It does not take into account of the event's set date and time on the specified input date
 (To have a more detailed view of the event, simply double click on that event).
 As long as the user's specified input date falls between the event's start and end date, the event will be displayed.
+====
 
 ---
 
@@ -700,11 +704,13 @@ on 11/2019 which are "Talk by DEF Company" and "Birthday Party".
 image::ScheduleUiMonthStep3.png[]
 
 [NOTE]
-** The event list will be empty and not display anything if there is no event on the specified date.
-** The command is designed to give an overview of the user's schedule and is based on the event's Start and End date.
-It does not take account of whether the event has a set date and time on the specified input month, year
+====
+- The event list will be empty and not display anything if there is no event on the specified date.
+- The command is designed to give an overview of the user's schedule and is based on the event's Start and End date.
+It does not take into account of the event's set date and time on the specified input month, year
 (To have a more detailed view of the event, simply double click on that event).
 As long as the user's specified input month, year falls between the event's start and end date, the event will be displayed.
+====
 
 ---
 
@@ -761,12 +767,14 @@ Examples:
 ****
 
 [NOTE]
-** The event list will be empty and not display anything if there is no event between the specified dates.
-** The command is designed to give an overview of the user's schedule and is based on the event's Start and End date.
-It does not take account of whether the event has a set date and time on the specified input month, year
+====
+- The event list will be empty and not display anything if there is no event between the specified dates.
+- The command is designed to give an overview of the user's schedule and is based on the event's Start and End date.
+It does not take into account of the event's set date and time on the specified input date range.
 (To have a more detailed view of the event, simply double click on that event).
 As long as the user's specified start and end date range includes a single date that the event's start and end date spans across
 , the event will be displayed.
+====
 
 //tag::Statistics[]
 === Statistics
