--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -430,7 +430,8 @@ instance of the class is instantiated.
 * `alert`: Refers to a `Runnable` function which checks if the current status of the body is `ARRIVED` and if so,
 changes it to `CONTACT_POLICE`.
 
-* `notifCreationTime`: Refers to a `Date` object which stores the date and time at the point of addition of the body.
+* `notifCreationTime`: Refers to a `Date` object which stores the date and time at the point of addition of the body
+in Mortago.
 
 The constructor of a `NotifCommand` must be provided with the following parameters:
 
@@ -1068,7 +1069,7 @@ Use case ends.
 1.  Mortuary manager wants to be reminded of the next line of action if next of kin cannot be contacted within 24 hours.
 2.  Mortago maintains a record of all the notifications about bodies until their status is
 changed.
-3.  Mortago shows pop-up notification after 24 hours from the point of arrival of the body in the mortuary.
+3.  Mortago shows pop-up notification after 24 hours from the point of admission of the body in the mortuary.
 +
 Use case ends.
 
